@@ -1,3 +1,5 @@
+1/11/12 Simsharing: remove broken drag handler accessor from FaucetNode, make FaucetSliderNode a subclass of SimSharingHSliderNode
+1/11/12 Simsharing: remove simsharing from HSliderNode and VSliderNode, to be added via subclassing
 1/11/12 Simsharing: add PInputEvent parameter to SimSharingDragHandler methods that are intended to be overridden
 1/11/12 Simsharing: factor out SimSharingDragPoints, for use in Swing and Piccolo drag handlers
 1/4/12 Added sim sharing features to play/pause/step and icon buttons
